<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asiantech.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background_edittop">

        <TextView
            android:id="@+id/tvBgSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/ic_background_editbottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvBgSignin">


            <TextView
                android:id="@+id/tvFb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_fb"
                android:gravity="center"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgFb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_fb"
                app:layout_constraintLeft_toLeftOf="@id/tvFb"
                app:layout_constraintTop_toTopOf="@id/tvFb" />

            <TextView
                android:id="@+id/tvTw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_tw"
                android:gravity="center"
                android:text="@string/sign_in_with_twitter"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvFb" />

            <ImageView
                android:id="@+id/imgTw"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_twitter"
                app:layout_constraintLeft_toLeftOf="@id/tvTw"
                app:layout_constraintTop_toTopOf="@id/tvTw" />

            <TextView
                android:id="@+id/tvGg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_yt"
                android:gravity="center"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTw" />

            <ImageView
                android:id="@+id/imgGg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google"
                app:layout_constraintLeft_toLeftOf="@id/tvGg"
                app:layout_constraintTop_toTopOf="@id/tvGg" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="65dp"
                android:text="Or"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgGg" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="75dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/tvGg"
                app:layout_constraintRight_toLeftOf="@id/tvOr"
                app:layout_constraintTop_toTopOf="@id/tvGg" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="75dp"
                android:layout_marginRight="60dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintLeft_toRightOf="@id/tvOr"
                app:layout_constraintRight_toRightOf="@id/tvGg"
                app:layout_constraintTop_toTopOf="@id/tvGg" />

            <EditText
                android:id="@+id/tvuser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_login"
                android:gravity="center|left"
                android:hint="@string/email_of_mobile_number"
                android:paddingLeft="20dp"
                android:textColor="@color/colorGrey"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvOr" />

            <EditText
                android:id="@+id/tvpass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_login"
                android:gravity="center|left"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:textColor="@color/colorGrey"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvuser" />

            <TextView
                android:id="@+id/tvforgort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvpass"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/tvbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ic_background_button"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorBlue"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvforgort" />

            <TextView
                android:id="@+id/tvnosign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvbutton"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginRight="110dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorBlue"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvbutton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
