<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_background_edittop">

    <TextView
        android:id="@id/tvsignup"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:background="@drawable/ic_background_editbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@id/tvFb"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_background_fb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_in_with_facebook"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/imgFb"
            android:src="@mipmap/ic_fb"
            app:layout_constraintTop_toTopOf="@id/tvFb"
            app:layout_constraintLeft_toLeftOf="@id/tvFb"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@id/tvTw"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_background_tw"
            app:layout_constraintTop_toTopOf="@id/tvFb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_in_with_twitter"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center"/>
        <ImageView
            android:id="@id/imgTw"
            android:src="@mipmap/ic_twitter"
            app:layout_constraintTop_toTopOf="@id/tvTw"
            app:layout_constraintLeft_toLeftOf="@id/tvTw"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@id/tvGg"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_background_yt"
            app:layout_constraintTop_toTopOf="@id/tvTw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_in_with_google"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center"/>
        <ImageView
            android:id="@id/imgGg"
            android:src="@mipmap/ic_google"
            app:layout_constraintTop_toTopOf="@id/tvGg"
            app:layout_constraintLeft_toLeftOf="@id/tvGg"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@id/tvOr"
            android:layout_margin="65dp"
            android:text="Or"
            app:layout_constraintTop_toTopOf="@id/imgGg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="75dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toTopOf="@id/tvGg"
            app:layout_constraintLeft_toLeftOf="@id/tvGg"
            app:layout_constraintRight_toLeftOf="@id/tvOr"
            android:layout_width="0dp"
            android:layout_height="0.5dp"/>
        <View
            android:layout_marginTop="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="60dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toTopOf="@id/tvGg"
            app:layout_constraintLeft_toRightOf="@id/tvOr"
            app:layout_constraintRight_toRightOf="@id/tvGg"
            android:layout_width="0dp"
            android:layout_height="0.5dp"/>

        <EditText
            android:id="@id/tvuser"
            android:layout_marginTop="40dp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorGrey"
            android:background="@drawable/ic_background_login"
            app:layout_constraintTop_toTopOf="@id/tvOr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/email_of_mobile_number"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center|left"/>
        <EditText
            android:id="@id/tvpass"
            android:layout_marginTop="60dp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorGrey"
            android:background="@drawable/ic_background_login"
            app:layout_constraintTop_toTopOf="@id/tvuser"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/password"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center|left"/>
        <EditText
            android:id="@+id/tvConfpass"
            android:layout_marginTop="60dp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorGrey"
            android:background="@drawable/ic_background_login"
            app:layout_constraintTop_toTopOf="@id/tvpass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/confirm_password"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center|left"/>

        <CheckBox
            android:id="@+id/cbAgre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="55dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvConfpass"
            app:layout_constraintLeft_toRightOf="@id/cbAgre"/>

        <TextView
            android:id="@+id/tvAgr"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorGrey"
            android:text="I agree to our Terms and Conditions Agreement."
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tvConfpass"
            app:layout_constraintLeft_toLeftOf="@id/cbAgre"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvButtonSp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlue"
            android:background="@drawable/ic_background_button"
            app:layout_constraintTop_toTopOf="@id/tvAgr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvAcc"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="100dp"
            android:textColor="@color/colorGrey"
            android:text="Already have account?"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tvButtonSp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvSigin"
            android:layout_marginTop="60dp"
            android:layout_marginRight="120dp"
            android:textColor="@color/colorBlue"
            android:text="@string/sign_in"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tvButtonSp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>